# protocol

./: .gitignore  README.md  pyproject.toml
.github/workflows/: generate-protocols.yml  publish-dart-package.yml  release-dart-package.yml
docs/: architecture.md  open-earable-2-integration.md
protocol_generator/: __init__.py  __main__.py  api.py  cli.py  defaults.py  errors.py  generator.py  model.py  naming.py  output.py  registry.py  repository.py  text.py
protocol_generator/emitters/: __init__.py  base.py  c.py  dart.py
protocol_generator/schema/: __init__.py  loader.py  parser.py  yaml_subset.py
schemas/: CHANGELOG.md
schemas/audio-response/: README.md  protocol.yml
scripts/: generate_protocols.py
tests/: test_generate_protocols.py  test_prepare_dart_release.py
tools/: prepare_dart_release.py
zephyr/: module.yml
